--- a/UI/ColorVision.UI.Desktop/Download/DownloadWindow.xaml
+++ b/UI/ColorVision.UI.Desktop/Download/DownloadWindow.xaml
@@ -39,15 +39,14 @@
                 <Grid Grid.Column="1" Margin="10,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*" MaxWidth="300"/>
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="{x:Static properties:Resources.Search}" VerticalAlignment="Center" Margin="0,0,5,0"/>
                     <TextBox x:Name="SearchTextBox" Grid.Column="1" VerticalAlignment="Center" TextChanged="SearchTextBox_TextChanged"/>
                 </Grid>
 
                 <StackPanel Grid.Column="2" Orientation="Horizontal">
-                    <Button Content="&#xE72C;" FontFamily="Segoe MDL2 Assets" ToolTip="{x:Static properties:Resources.Refresh}" Click="Refresh_Click" Margin="2,0" Padding="6,3" Background="Transparent" BorderThickness="0"/>
-                    <Button Content="&#xE713;" FontFamily="Segoe MDL2 Assets" ToolTip="{x:Static properties:Resources.DownloadSettings}" Click="Settings_Click" Margin="2,0" Padding="6,3" Background="Transparent" BorderThickness="0"/>
+                    <Button Content="&#xE72C;" FontFamily="Segoe MDL2 Assets" FontSize="18"  ToolTip="{x:Static properties:Resources.Refresh}" Click="Refresh_Click" Margin="2,0" Padding="6,3" Background="Transparent" BorderThickness="0"/>
+                    <Button Content="&#xE713;" FontFamily="Segoe MDL2 Assets" FontSize="22" ToolTip="{x:Static properties:Resources.DownloadSettings}" Click="Settings_Click" Margin="2,0" Padding="6,3" Background="Transparent" BorderThickness="0"/>
                 </StackPanel>
             </Grid>
         </Border>
@@ -168,8 +167,8 @@
             <Grid Margin="8,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
@@ -178,7 +177,7 @@
                     <TextBlock x:Name="StatusBarText" Text="" FontSize="11" Foreground="Gray" VerticalAlignment="Center"/>
                 </StackPanel>
 
-                <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" Margin="15,0,0,0">
+                <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" Margin="15,0,0,0">
                     <TextBlock Text="{x:Static properties:Resources.TotalRecords}" VerticalAlignment="Center" Margin="0,0,3,0" FontSize="11"/>
                     <TextBlock x:Name="TotalCountText" Text="0" VerticalAlignment="Center" FontSize="11"/>
                     <TextBlock Text="{x:Static properties:Resources.PageSize}" VerticalAlignment="Center" Margin="15,0,3,0" FontSize="11"/>
@@ -190,13 +189,13 @@
                 </StackPanel>
 
                 <StackPanel Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center">
-                    <Button Content="|&lt;" Click="FirstPage_Click" Style="{StaticResource ButtonDefault.Small}" BorderThickness="0" Width="26" Margin="1,0"/>
-                    <Button Content="&lt;" Click="PrevPage_Click" Style="{StaticResource ButtonDefault.Small}" BorderThickness="0" Width="26" Margin="1,0"/>
-                    <TextBox x:Name="CurrentPageTextBox" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="1" Width="40" VerticalAlignment="Center" TextAlignment="Center" KeyDown="CurrentPageTextBox_KeyDown"/>
+                    <Button Content="|&lt;" Click="FirstPage_Click" Style="{StaticResource ButtonDefault.Small}" BorderThickness="0" Margin="1,0" Padding="2" />
+                    <Button Content="&lt;" Click="PrevPage_Click" Style="{StaticResource ButtonDefault.Small}" BorderThickness="0" Margin="1,0" Padding="2" />
+                    <TextBox x:Name="CurrentPageTextBox" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="1" FontSize="11"  VerticalAlignment="Center" TextAlignment="Center" KeyDown="CurrentPageTextBox_KeyDown"/>
                     <TextBlock Text="/" VerticalAlignment="Center" Margin="3,0" FontSize="11"/>
                     <TextBlock x:Name="TotalPagesText" Text="1" VerticalAlignment="Center" FontSize="11"/>
-                    <Button Content="&gt;" Style="{StaticResource ButtonDefault.Small}" Click="NextPage_Click" BorderThickness="0" Width="26" Margin="1,0"/>
-                    <Button Content="&gt;|" Style="{StaticResource ButtonDefault.Small}" Click="LastPage_Click" BorderThickness="0" Width="26" Margin="1,0"/>
+                    <Button Content="&gt;" Style="{StaticResource ButtonDefault.Small}" Click="NextPage_Click" BorderThickness="0" Margin="1,0" Padding="2"/>
+                    <Button Content="&gt;|" Style="{StaticResource ButtonDefault.Small}" Click="LastPage_Click" BorderThickness="0" Margin="1,0" Padding="2"/>
                 </StackPanel>
             </Grid>
         </Border>
